style.css
/* Bismillah :) */



@font-face {
    font-family: 'DM Sans';
    src: 
    url('./assets/fonts/DM_Sans/static/DMSans-Regular.ttf') format('truetype'),
    url('./assets/fonts/DM_Sans/static/DMSans-Bold.ttf');

    font-weight: bold;
    font-style: normal;
  }


  :root {
    --neutral-900: #12131A;
    --neutral-800: #21222C;
    --neutral-700: #2A2B37;
    --neutral-600: #404254;
    --neutral-200: #E4E4EF;
    --neutral-100: #F2F2F7;
    --neutral-0: #FFFFFF;

    --purple-400: #D3A0FA;
    --purple-500: #C27CF8;

    --yellow-500: #FF9F00;

    --orange-500: #FE8159;
    --orange-800: #DA3701;

    --background: var(--neutral-0);
    --background-image: url(./assets/images/bg-light-theme.png);
    --logo: url(./assets/images/logo-light-theme.svg);
    --text-color: var(--neutral-900);
    --accent-color: var(--purple-500);
    --toggle-button-bg: var(--neutral-100);
    --textarea-bg: var(--neutral-100);
    --textarea-border: var(--neutral-200)



  }

  body.dark-theme {
    --background: var(--neutral-900);
    --logo: url(./assets/images/logo-dark-theme.svg);
    --background-image: url(./assets/images/bg-dark-theme.png);
    --text-color: var(--neutral-100);
    --accent-color: var(--yellow-500);
    --toggle-button-bg: var(--neutral-700);
    --textarea-bg: var(--neutral-800);
    --textarea-border: var(--neutral-600)

  }
/* automatic theme change */

/* dark mode */
/*   @media (prefers-color-scheme: dark) {
    :root{
     
        --background: var(--neutral-900);
        --logo: url(./assets/images/logo-dark-theme.svg);
        --background-image: url(./assets/images/bg-dark-theme.png);
        --text-color: var(--neutral-100);
        --accent-color: var(--yellow-500);
        --toggle-button-bg: var(--neutral-700);
        --textarea-bg: var(--neutral-800);
        --textarea-border: var(--neutral-600)
    
    
    } */
    }

    /* light mode */
    @media (prefers-color-scheme: light) {
      :root{
       
        --background: var(--neutral-0);
        --background-image: url(./assets/images/bg-light-theme.png);
        --logo: url(./assets/images/logo-light-theme.svg);
        --text-color: var(--neutral-900);
        --accent-color: var(--purple-500);
        --toggle-button-bg: var(--neutral-100);
        --textarea-bg: var(--neutral-100);
        --textarea-border: var(--neutral-200)
      
      }
      }
  
 


  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  body{
    max-width: 979px;
    width:auto;
    margin-inline: auto;
    margin-block: 42px;
    padding:10px;
    background-image: var(--background-image);
    font-family: 'DMsans', sans-serif;
    transition: background 0.3s, color 0.3s;
    
  }

  .disCenter{
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .logo{
    width: 246px;
    height: 40px;
    background-image: var(--logo);
  }

  .toggle{
    width: 40px;
    height: 40px;
    border-radius: 8px;
    background-color: var(--toggle-button-bg);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border: none;
  }
  
  h1{
    margin-block:48px;
    margin-inline: auto;
    height: 128px;
    max-width:510px;
    width: auto;
    color: var(--text-color);
    font-size: 64px;
    line-height: -1px;
    font-family: 'DMsans', sans-serif;
    text-align: center;
  }
  
  

   textarea{
    width: 100%;
    border-radius: 10px;
    color: var(--text-color);
    background-color: var(--textarea-bg);
    border: 2px solid var(--textarea-border);
    margin: 0 auto 16px auto;
    height: 200px;
    padding: 6px;
   }

   textarea:focus{
    border: 2px solid rgba(194, 124, 248);
    outline: none;
    box-shadow: 1px 0px 5px rgba(194, 124, 248);
    padding: 16px;


   }

   textarea::placeholder{
    padding: 5px;
   }

   .debugger{
    border:1px solid red;
   }

   .custom-checkbox {
    display: inline-flex;
    align-items: center;
    cursor: pointer;
    font-family: sans-serif;
    padding-right: 20px;
  }

  .custom-checkbox input {
    display: none;
  }

  .checkmark {
    width: 20px;
    height: 20px;
    border: 1px solid var(--text-color);
    border-radius: 5px;
    display: inline-block;
    margin-right: 8px;
    position: relative;
    box-sizing: border-box;
    transition: all 0.2s ease;
  }

  
  .custom-checkbox:hover .checkmark {
    border: 2px solid var(--purple-500);
  }

  
  .custom-checkbox input:checked + .checkmark {
    background-color: var(--purple-500);
    border: 2px solid var(--purple-500);
    box-shadow: 0 0 0 2px white, 0 0 0 4px var(--purple-500);
  }

  
  .checkmark::after {
    content: "";
    position: absolute;
    display: none;
  }

  .custom-checkbox input:checked + .checkmark::after {
    display: block;
    left: 6px;
    top: 2px;
    width: 5px;
    height: 10px;
    border: solid var(--text-color);
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
  }

 
   .alert{
    color: var(--orange-800);
    align-content: center;
    margin: -5px  0 10px 0;
    display: none;
   }

   .excSpaces{
    display: flex;
    flex-direction: row;
    min-width: 318px;
    width: auto;
   }

   .alert img{
    vertical-align: middle;
    margin-right: 5px;
    
   }
   
   input[type="number"]{
    width: 55px;
    height: 29px;
    border: 1px solid var(--neutral-900);
    border-radius: 6px;
    text-align: center;
    display: none;
   }

   .leftSmall{
    margin-left: 20px;
   }

   .stats{
    margin-top: 48px;
   }

   .options, .letterDensity{
    color: var(--text-color);
   }

   .coontainer{
    width: 32%;
    max-width: 319.33px;
    height: 150px;
    border-radius: 12px;
    border: none;
    background-position: right;
    background-repeat: no-repeat;
    background-size: contain;
    padding-block:20px ;
    padding-left: 20px;
   }

   .coontainer h2{
    font-size: 64px;
   }

   .totalCharacters{
    background-image: url(./assets/images/pattern-character-count.svg);
    background-color: var(--purple-400);
   }

   .wordCount{
    background-image: url(./assets/images/pattern-word-count.svg);
    background-color: var(--yellow-500);
   }

   .sentencecount{
    background-image: url(./assets/images/pattern-sentence-count.svg);
    background-color: var(--orange-500);
   }


   input[type="checkbox"]:checked {
    accent-color: rgba(211, 160, 250); 
   }

   .letterDensity{
    margin-top: 24px;
   }

   .data{
    height: 21px;
    margin-block: 6px;
    
   }

   .progress-container {
    max-width: 859px;
    width: 100%;
    height: 12px;
    background: var(--neutral-100);
    border-radius: 10px;
    /* overflow: hidden; */
  }
  
  .progress-bar {
    height: 100%;
    width: 50%; 
    border-radius: 10px;
    background: var(--purple-400);
    transition: width 0.4s ease-in-out;
  }
  
  h3{
    margin-bottom: 20px;
  }

  .data small:nth-child(1){
    width: 16px;
  }

  data small:nth-child(2){
    width: 87px;
  }
  .letterDensity p{
    margin-top: 20px;
  }

  @media (max-width:500px) {

    h1{
      font-size: 50px;
      height: 150px;
    }

    .excSpaces{
      flex-direction: column;
      gap: 10px;
    }

    .options{
      flex-direction: column;
      gap: 10px;
    }
    .options > *{
      width: 100%;
    }
    .leftSmall{
      margin-left:0;
    }

    .stats{
      flex-direction: column;
      gap: 10px;
    }
    .coontainer{
      min-width: 100%;
    }
  }
  





   
  
  

